# LocalPdfTranslator

./: .gitignore  README.md  README_pdf_markdown_zh_translator.md  Tasks.md  pyproject.toml  translate_epub_to_epub.py
output/F-104 Starfighter Units in Combat/: document.en.raw.md  document.zh-TW.md  metadata.json  report.md
output/F-104 Starfighter Units in Combat/chunks/: chunk-0001.en.md  chunk-0001.zh-TW.md  chunk-0002.en.md  chunk-0002.zh-TW.md  chunk-0003.en.md  chunk-0003.zh-TW.md  chunk-0004.en.md  chunk-0004.zh-TW.md  chunk-0005.en.md  chunk-0005.zh-TW.md  chunk-0006.en.md  chunk-0006.zh-TW.md  chunk-0007.en.md  chunk-0007.zh-TW.md  chunk-0008.en.md  chunk-0008.zh-TW.md  chunk-0009.en.md  chunk-0009.zh-TW.md  chunk-0010.en.md  chunk-0010.zh-TW.md  chunk-0011.en.md  chunk-0011.zh-TW.md  chunk-0012.en.md  chunk-0012.zh-TW.md  chunk-0013.en.md  chunk-0013.zh-TW.md  chunk-0014.en.md  chunk-0014.zh-TW.md  chunk-0015.en.md  chunk-0015.zh-TW.md  chunk-0016.en.md  chunk-0016.zh-TW.md  chunk-0017.en.md  chunk-0017.zh-TW.md  chunk-0018.en.md  chunk-0018.zh-TW.md  (+137 more)
output/War and Peace and War/: War and Peace and War.zh-TW.epub  document.en.normalized.md  document.original.epub  document.zh-TW.md  metadata.json  report.md
scripts/: translate_chapter_range.py
src/local_pdf_translator/: __init__.py  cli.py  epub.py  markdown_pipeline.py  models.py  ollama.py  pdf.py  pipeline.py  prompt.py  workspace.py
tests/: epub_helpers.py  test_cli.py  test_epub.py  test_markdown_pipeline.py  test_models.py  test_pdf.py  test_translation_pipeline.py  test_workspace.py
(+720 files in other folders)
