[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "local-pdf-translator"
version = "0.1.0"
description = "Local PDF to Traditional Chinese Markdown translation pipeline."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "LocalPdfTranslator contributors" }
]
dependencies = []

[project.scripts]
local-pdf-translator = "local_pdf_translator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
